--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cmdk": "^1.0.4",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^12.4.10",
     "lucide-react": "^0.468.0",
     "next": "14.2.23",
     "next-themes": "^0.2.1",
@@ -37,6 +38,7 @@
     "react-day-picker": "^9.5.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
+    "react-intersection-observer": "^9.16.0",
     "react-resizable-panels": "^2.1.7",
     "stripe": "^17.6.0",
     "tempo-devtools": "^2.0.94",
